fix spacing and layout for some things

--- a/style.css
+++ b/style.css
@@ -159,9 +159,15 @@ body {
   padding: var(--spacing-2xl) 0;
 }
 
-.section-title,
-.second-section-title {
+.section-title {
   text-align: center;
+  margin-bottom: var(--spacing-lg);
+  font-size: var(--font-size-lg);
+  font-weight: var(--font-weight-bold);
+}
+
+.second-section-title{
+  text-align: left;
   margin-bottom: var(--spacing-lg);
   font-size: var(--font-size-lg);
   font-weight: var(--font-weight-bold);
@@ -179,10 +185,10 @@ body {
 .second-section-title::after {
   content: "";
   display: block;
-  width: 20rem;
+  width: 20.2rem;
   height: 0.2rem;
   background-color: var(--color-bg-light);
-  margin: var(--spacing-sm) auto 0;
+  margin-top: var(--spacing-sm);
 }
 
 .features__grid {
@@ -227,6 +233,12 @@ body {
 .extra__content {
   text-align: left;
 }
+
+.extra-card {
+  padding: var(--spacing-md) 0;
+  margin-bottom: var(--spacing-md);
+}
+
 
 .extra-card__title {
   font-size: var(--font-size-lg);
